[package]
name = "manually-static"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = """
Provides `ManualStatic` that is a wrapper which allows to manually manage `'static` lifetimes.
It is unsafe but with `debug_assertions` it panics when the usage is wrong.
"""
rust-version = "1.70.0"
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]
readme = "README.md"
repository = "https://github.com/Eugene-Usachev/manually-static"
categories = ["memory-management"]
keywords = ["memory-management", "static", "lifetime", "unsafe"]

[dependencies]
